Enabling Assets at the Service Layer  Step 2 of 3

--- a/modules/guestbook/guestbook-service/build.gradle
+++ b/modules/guestbook/guestbook-service/build.gradle
@@ -15,6 +15,9 @@ dependencies {
 	
 	compileOnly group: "com.liferay", name: "com.liferay.portal.search.spi"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.search.api"
+	
+	compileOnly group: "javax.portlet", name: "portlet-api"
+	compileOnly group: "javax.servlet", name: "javax.servlet-api"
 }
 
 buildService {
