--- a/modules/guestbook/guestbook-api/build.gradle
+++ b/modules/guestbook/guestbook-api/build.gradle
@@ -1,3 +1,8 @@
+apply plugin: "maven"
+
+group = "com.liferay.docs"
+version = "1.0"
+
 dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string"
