--- a/modules/guestbook/guestbook-service/build.gradle
+++ b/modules/guestbook/guestbook-service/build.gradle
@@ -1,3 +1,7 @@
+apply plugin: "maven"
+
+version = "1.0"
+
 dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.petra.io"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.lang"
