--- a/wars/test-jsf-mvn-portlet/src/main/resources/i18n.properties
+++ b/wars/test-jsf-mvn-portlet/src/main/resources/i18n.properties
@@ -2,3 +2,4 @@
 # is deployed to any portal, the i18n object can also access messages found in a portlet.xml <resource-bundle> . When
 # deployed to Liferay Portal, the i18n object can also access messages found in the portal's Language.properties file.
 test-jsf-mvn-portlet-hello-world=Hello Test JSF MVN Portlet!
+enter-your-name=Enter your name
