--- a/wars/test-jsf-mvn-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/wars/test-jsf-mvn-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -8,5 +8,25 @@ page-url=http://www.liferay.com
 author=Liferay, Inc.
 licenses=LGPL
 Bundle-Version: 1.0.0
-${osgi.dynamic.import.package}
-${osgi.import.package}
+DynamicImport-Package: \
+	com.liferay.faces.alloy.*,\
+	com.liferay.faces.bridge.*,\
+	com.liferay.faces.portlet.*,\
+	com.liferay.faces.util.*,\
+	com.sun.faces.*,\
+	javax.faces.*,\
+	javax.portlet.faces.*,\
+	com.liferay.docs.guestbook.*
+Import-Package: \
+	com.liferay.faces.alloy,\
+	com.liferay.faces.bridge.ext,\
+	com.liferay.faces.bridge.impl,\
+	com.sun.faces,\
+	javax.annotation,\
+	javax.faces,\
+	javax.portlet.faces,\
+	net.fortuna.ical4j.*;resolution:=optional,\
+	org.apache.axis.tools.ant.*;resolution:=optional,\
+	org.apache.poi.*;resolution:=optional,\
+	com.swabunga.spell.*;resolution:=optional,\
+	*
