guestbook jsf thin osgi primefaces portlet configured

--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -1,10 +1,34 @@
 name=guestbook-jsf
 module-group-id=guestbook-jsf
 module-incremental-version=1
-tags=guestbook
+tags=sample
 short-description=A Guestbook JSF Portlet
 change-log=
 page-url=http://www.liferay.com
 author=Liferay, Inc.
 licenses=LGPL
 Bundle-Version: 1.0.0
+DynamicImport-Package: \
+	com.liferay.faces.alloy.*,\
+	com.liferay.faces.bridge.*,\
+	com.liferay.faces.portlet.*,\
+	com.liferay.faces.util.*,\
+	com.sun.faces.*,\
+	javax.faces.*,\
+	javax.portlet.faces.*,\
+	com.liferay.docs.guestbook.*,\
+	org.primefaces.*
+Import-Package: \
+	com.liferay.faces.alloy,\
+	com.liferay.faces.bridge.ext,\
+	com.liferay.faces.bridge.impl,\
+	com.sun.faces,\
+	javax.annotation,\
+	javax.faces,\
+	javax.portlet.faces,\
+	net.fortuna.ical4j.*;resolution:=optional,\
+	org.apache.axis.tools.ant.*;resolution:=optional,\
+	org.apache.poi.*;resolution:=optional,\
+	com.swabunga.spell.*;resolution:=optional,\
+	org.primefaces,\
+	*
