--- a/wars/guestbook-jsf-portlet/build.gradle
+++ b/wars/guestbook-jsf-portlet/build.gradle
@@ -1,15 +1,28 @@
 
 repositories {
      mavenCentral()
+     mavenLocal()
 }
 
 dependencies {
     providedCompile group: 'javax.faces', name: 'javax.faces-api', version: '2.2'
-    runtime group: 'org.glassfish', name: 'javax.faces', version: '2.2.20'
-    runtime group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '6.0.0'
-    runtime group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '4.1.4'
-    compile group: 'log4j', name: 'log4j', version: '1.2.14'
-    compile group: 'org.primefaces', name: 'primefaces', version: '7.0'
+    providedCompile group: 'org.glassfish', name: 'javax.faces', version: '2.2.20'
+    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.util', version: '3.4.0'
+    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '5.0.0-SNAPSHOT'
+    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0-SNAPSHOT'
+    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0-SNAPSHOT'
+    compileOnly group: 'log4j', name: 'log4j', version: '1.2.14'
+    
+    providedCompile group: 'org.jboss.weld.servlet', name: 'weld-servlet', version: '2.3.3.Final'
+    providedCompile group: 'javax.enterprise', name: 'cdi-api', version: '1.2'
+    providedCompile group: 'org.osgi', name: 'org.osgi.service.cdi', version: '1.0.0'
+    compileOnly group: 'javax.portlet', name: 'portlet-api', version: '3.0.0'
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.api', version: '2.0.0'
+    providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.kernel', version: '7.2.0'
+    compileOnly group: 'javax.el', name: 'javax.el-api', version: '2.2.1'
+    
+    compileOnly group: 'org.primefaces', name: 'primefaces', version: '8.0'
     
     compileOnly project(":modules:guestbook:guestbook-api")
     compileOnly project(":modules:guestbook:guestbook-service")
