--- a/wars/guestbook-jsf-portlet/src/main/resources/i18n.properties
+++ b/wars/guestbook-jsf-portlet/src/main/resources/i18n.properties
@@ -1,4 +1,5 @@
 # These messages can be accessed via EL using the implicit i18n object provided by Liferay Faces Util. When the portlet
 # is deployed to any portal, the i18n object can also access messages found in a portlet.xml <resource-bundle> . When
 # deployed to Liferay Portal, the i18n object can also access messages found in the portal's Language.properties file.
-guestbook-jsf-hello-world=Hello Guestbook JSF Portlet!
+guestbook-jsf-hello-world=Hello Guestbook Primefaces Portlet!
+enter-your-name=Enter your name
