--- a/wars/guestbook-jsf-portlet/build.gradle
+++ b/wars/guestbook-jsf-portlet/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     providedCompile group: 'org.jboss.weld.servlet', name: 'weld-servlet', version: '2.3.3.Final'
     providedCompile group: 'javax.enterprise', name: 'cdi-api', version: '1.2'
     providedCompile group: 'org.osgi', name: 'org.osgi.service.cdi', version: '1.0.0'
+    providedCompile group: 'org.osgi', name: 'org.osgi.annotation.versioning', version: '1.0.0'
     compileOnly group: 'javax.portlet', name: 'portlet-api', version: '3.0.0'
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.api', version: '2.0.0'
