--- a/wars/test-jsf-mvn-portlet/pom.xml
+++ b/wars/test-jsf-mvn-portlet/pom.xml
@@ -63,6 +63,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.annotation.versioning</artifactId>
+			<version>1.0.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax.portlet</groupId>
 			<artifactId>portlet-api</artifactId>
 			<version>3.0.0</version>
