Implementing a UI with JSF Views

--- a/wars/guestbook-jsf-portlet/src/main/resources/content/Language.properties
+++ b/wars/guestbook-jsf-portlet/src/main/resources/content/Language.properties
@@ -6,3 +6,8 @@ javax.portlet.displayName=Guestbook JSF
 javax.portlet.title=Guestbook JSF
 javax.portlet.short-title=Guestbook JSF
 javax.portlet.keywords=Guestbook JSF
+
+add-guestbook=Add Guestbook
+new-entry=New Entry
+new-guestbook=New Guestbook
+no-entries-yet=No entries yet ...
