--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -13,6 +13,7 @@ DynamicImport-Package: \
 	com.liferay.faces.bridge.*,\
 	com.liferay.faces.portlet.*,\
 	com.liferay.faces.util.*,\
+	com.liferay.faces.portal.*\
 	com.sun.faces.*,\
 	javax.faces.*,\
 	javax.portlet.faces.*,\
@@ -22,6 +23,7 @@ Import-Package: \
 	com.liferay.faces.alloy,\
 	com.liferay.faces.bridge.ext,\
 	com.liferay.faces.bridge.impl,\
+	com.liferay.faces.portal,\
 	com.sun.faces,\
 	javax.annotation,\
 	javax.faces,\
