--- a/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/wars/guestbook-jsf-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -18,7 +18,8 @@ DynamicImport-Package: \
 	javax.faces.*,\
 	javax.portlet.faces.*,\
 	com.liferay.docs.guestbook.*,\
-	org.primefaces.*
+	org.primefaces.*,\
+	com.liferay.faces.portal.*
 Import-Package: \
 	com.liferay.faces.alloy,\
 	com.liferay.faces.bridge.ext,\
@@ -33,4 +34,5 @@ Import-Package: \
 	org.apache.poi.*;resolution:=optional,\
 	com.swabunga.spell.*;resolution:=optional,\
 	org.primefaces,\
+	com.liferay.faces.portal,\
 	*
