--- a/wars/guestbook-jsf-portlet/build.gradle
+++ b/wars/guestbook-jsf-portlet/build.gradle
@@ -20,8 +20,11 @@ dependencies {
     compileOnly group: 'org.osgi', name: 'org.osgi.annotation.versioning', version: '1.0.0'
     compileOnly group: 'javax.portlet', name: 'portlet-api', version: '3.0.0'
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-    compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.api', version: '2.0.0'
-    providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.kernel', version: '7.2.0'
+    compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.api', version: '2.0.1'
+    compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.cdi.extension', version: '2.0.7'
+    compileOnly group: "com.liferay", name: "com.liferay.portal.osgi.web.wab.generator.impl", version: "2.0.22.cm310947"
+    providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.kernel', version: '4.35.3'
+    providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.impl', version: '4.12.12'
     compileOnly group: 'javax.el', name: 'javax.el-api', version: '2.2.1'
     
     compileOnly group: 'org.primefaces', name: 'primefaces', version: '8.0'
