Configuring a Basic Permissions Scheme

--- a/wars/guestbook-jsf-portlet/src/main/resources/content/Language.properties
+++ b/wars/guestbook-jsf-portlet/src/main/resources/content/Language.properties
@@ -7,6 +7,8 @@ javax.portlet.title=Guestbook JSF
 javax.portlet.short-title=Guestbook JSF
 javax.portlet.keywords=Guestbook JSF
 
+action.ADD_GUESTBOOK=Add Guestbook
+
 add-guestbook=Add Guestbook
 new-entry=New Entry
 new-guestbook=New Guestbook
