inconsistencies at showing the permissions page

--- a/wars/guestbook-jsf-portlet/build.gradle
+++ b/wars/guestbook-jsf-portlet/build.gradle
@@ -23,8 +23,11 @@ dependencies {
     compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.api', version: '2.0.1'
     compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.cdi.extension', version: '2.0.7'
     compileOnly group: "com.liferay", name: "com.liferay.portal.osgi.web.wab.generator.impl", version: "2.0.22.cm310947.1"
+    compileOnly group: "com.liferay", name: "com.liferay.frontend.js.aui.web", version: "3.0.32"
+    compileOnly group: "com.liferay", name: "com.liferay.portlet.configuration.web", version: "3.0.23"
     providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.kernel', version: '4.35.3'
     providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.impl', version: '4.12.12'
+    providedCompile group: 'com.liferay.portal', name: 'com.liferay.util.taglib', version: '4.3.4'
     compileOnly group: 'javax.el', name: 'javax.el-api', version: '2.2.1'
     
     compileOnly group: 'org.primefaces', name: 'primefaces', version: '8.0'
