Adding Admin Portlet to the OSGi+CDI mvn base

--- a/gradle.properties
+++ b/gradle.properties
@@ -114,7 +114,8 @@ liferay.workspace.product = portal-7.2-ga2
     #
     #liferay.workspace.target.platform.version=7.3.5
 	
-	liferay.workspace.target.platform.version=7.2.1-ga2-test
+	#liferay.workspace.target.platform.version=7.2.1-ga2-test
+	liferay.workspace.target.platform.version=7.2.1
 
     #
     # Set the folder that contains Node.js-style theme projects. The default
