Defining Portlet Actions and Permissions - jsf-gb-cdi-thin

--- a/wars/guestbook-jsf-portlet/src/main/resources/i18n.properties
+++ b/wars/guestbook-jsf-portlet/src/main/resources/i18n.properties
@@ -3,3 +3,6 @@
 # deployed to Liferay Portal, the i18n object can also access messages found in the portal's Language.properties file.
 guestbook-jsf-hello-world=Hello Guestbook Primefaces Portlet!
 enter-your-name=Enter your name
+
+guestbook-admin-jsf-portlet-hello-world=Hello Guestbook Admin Primefaces Portlet!
+no-guestbooks-yet=No guestbooks yet ...
