--- a/wars/guestbook-jsf-portlet/build.gradle
+++ b/wars/guestbook-jsf-portlet/build.gradle
@@ -5,34 +5,43 @@ repositories {
 }
 
 dependencies {
-    //providedCompile group: 'javax.faces', name: 'javax.faces-api', version: '2.2'
-    providedCompile group: 'org.glassfish', name: 'javax.faces', version: '2.2.20'
-    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.util', version: '3.4.0'
-    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '5.0.0-SNAPSHOT'
-    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0-SNAPSHOT'
-    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0-SNAPSHOT'
-    providedCompile group: 'com.liferay.faces', name: 'com.liferay.faces.portal', version: '4.1.0'
-    compileOnly group: 'log4j', name: 'log4j', version: '1.2.14'
+
+    compileOnly group: 'org.glassfish', name: 'javax.faces', version: '2.2.20'
     
-    providedCompile group: 'org.jboss.weld.servlet', name: 'weld-servlet', version: '2.3.3.Final'
-    providedCompile group: 'javax.enterprise', name: 'cdi-api', version: '1.2'
-    providedCompile group: 'org.osgi', name: 'org.osgi.service.cdi', version: '1.0.0'
-    compileOnly group: 'org.osgi', name: 'org.osgi.annotation.versioning', version: '1.0.0'
-    compileOnly group: 'javax.portlet', name: 'portlet-api', version: '3.0.0'
-    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-    compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.api', version: '2.0.1'
-    compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.cdi.extension', version: '2.0.7'
-    compileOnly group: "com.liferay", name: "com.liferay.portal.osgi.web.wab.generator.impl", version: "2.0.22.cm310947.1"
-    compileOnly group: "com.liferay", name: "com.liferay.frontend.js.aui.web", version: "3.0.32"
-    compileOnly group: "com.liferay", name: "com.liferay.portlet.configuration.web", version: "3.0.23"
-    providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.kernel', version: '4.35.3'
-    providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.impl', version: '4.12.12'
-    providedCompile group: 'com.liferay.portal', name: 'com.liferay.util.taglib', version: '4.3.4'
-    compileOnly group: 'javax.el', name: 'javax.el-api', version: '2.2.1'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.alloy', version: '4.1.0'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0-SNAPSHOT'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0-SNAPSHOT'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '5.0.0-SNAPSHOT'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.util', version: '3.4.0'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.portal', version: '4.1.0'
     
     compileOnly group: 'org.primefaces', name: 'primefaces', version: '8.0'
     
+    compileOnly group: 'org.jboss.weld', name: 'weld-core-impl', version: '3.0.5.Final'
+    compileOnly group: 'javax.enterprise', name: 'cdi-api', version: '1.2'
+    compileOnly group: 'org.osgi', name: 'org.osgi.service.cdi', version: '1.0.0'
+    compileOnly group: 'org.osgi', name: 'org.osgi.annotation.versioning', version: '1.0.0'
+    
+    compileOnly group: 'javax.portlet', name: 'portlet-api', version: '3.0.0'
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    //compileOnly group: 'javax.el', name: 'javax.el-api', version: '2.2.1'
+    
+    compileOnly group: 'com.liferay.portal', name: 'com.liferay.portal.kernel'
+    //providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.impl', version: '4.12.11'
+    compileOnly group: 'log4j', name: 'log4j', version: '1.2.14'
+    
     compileOnly project(":modules:guestbook:guestbook-api")
     compileOnly project(":modules:guestbook:guestbook-service")
+
+    //compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.api', version: '2.0.1'
+    //compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.cdi.extension', version: '2.0.7'
+    //compileOnly group: "com.liferay", name: "com.liferay.portal.osgi.web.wab.generator.impl", version: "2.0.22.cm310947.1"
+    //compileOnly group: "com.liferay", name: "com.liferay.frontend.js.aui.web", version: "3.0.32"
+    //compileOnly group: "com.liferay", name: "com.liferay.portlet.configuration.web", version: "3.0.23"
+    //compileOnly group: "com.liferay", name: "com.liferay.application.list.api"
+    //compileOnly group: "com.liferay", name: "com.liferay.application.list.user.personal.site.permissions"
+    //compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
+    //compileOnly group: 'com.liferay.portal', name: 'com.liferay.util.taglib', version: '4.3.4'
+
 }
 
