Add: Dev Container file

--- a/gradle.properties
+++ b/gradle.properties
@@ -148,4 +148,4 @@ liferay.workspace.product = portal-7.2-ga2
     # information.
     #
 microsoft.translator.subscription.key = 
-target.platform.index.sources = true
+#target.platform.index.sources = true
