--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,13 @@
 {
 	"name": "lif-gb",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/java:1-8",
+	// "image": "mcr.microsoft.com/devcontainers/java:1-8",
+
+	// from Dockerfile:
+	"build": {
+		"dockerfile": "Dockerfile",
+		"args": { "VARIANT": "8" }
+	},
 
 	"features": {
 		"ghcr.io/devcontainers/features/java:1": {
@@ -17,10 +23,29 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "java -version && curl -L https://raw.githubusercontent.com/liferay/liferay-blade-cli/master/cli/installers/local | sh && echo 'export PATH=\"$PATH:$HOME/jpm/bin\"' >> ~/.bashrc"
+	"postCreateCommand": "java -version && curl -L https://raw.githubusercontent.com/liferay/liferay-blade-cli/master/cli/installers/local | sh && echo 'export PATH=\"$PATH:$HOME/jpm/bin\"' >> ~/.bashrc",
 
 	// Configure tool-specific properties.
 	// "customizations": {},
+
+	// Add another local file mount
+	// https://code.visualstudio.com/remote/advancedcontainers/add-local-file-mount
+	"mounts": [
+		//   "source=/local/source/path/goes/here,target=/target/path/in/container/goes/here,type=bind,consistency=cached",
+		//   this will bind mount ~ ($HOME) on macOS/Linux and the user's folder (%USERPROFILE%) on Windows
+		//   "source=${localEnv:HOME}${localEnv:USERPROFILE},target=/host-home-folder,type=bind,consistency=cached",
+		//   and a sub-folder in the workspace to a different location
+		//   "source=${localWorkspaceFolder}/app-data,target=/data,type=bind,consistency=cached",
+
+		// Avoiding VS Code extension reinstalls for a non-root user
+		// https://code.visualstudio.com/remote/advancedcontainers/avoid-extension-reinstalls
+		"source=lif-gb_exts,target=/node/.vscode-server/extensions,type=volume",
+		"source=lif-gb_exts-insiders,target=/node/.vscode-server-insiders/extensions,type=volume",
+
+		// Persist bash history for a non-root user
+		// https://code.visualstudio.com/remote/advancedcontainers/persist-bash-history
+		"source=lif-gb_bashhistory,target=/commandhistory,type=volume"
+	]
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	//"remoteUser": "root"
