Add: JSF thin WAR portlet dependencies (local) https://liferay.dev/blogs/-/blogs/how-to-try-jsf-thin-war-demo-portlets

--- a/wars/guestbook-jsf-portlet/build.gradle
+++ b/wars/guestbook-jsf-portlet/build.gradle
@@ -9,9 +9,12 @@ dependencies {
     compileOnly group: 'org.glassfish', name: 'javax.faces', version: '2.2.20'
     
     compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.alloy', version: '4.1.0'
-    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0-SNAPSHOT'
-    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0-SNAPSHOT'
-    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '5.0.0-SNAPSHOT'
+    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0-SNAPSHOT'
+    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0-SNAPSHOT'
+    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '5.0.0-SNAPSHOT'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '5.0.0'
     compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.util', version: '3.4.0'
     compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.portal', version: '4.1.0'
     
