Add: Filtering entries (view permission)

--- a/wars/guestbook-jsf-portlet/src/main/resources/i18n.properties
+++ b/wars/guestbook-jsf-portlet/src/main/resources/i18n.properties
@@ -5,6 +5,7 @@ guestbook-jsf-hello-world=Hello Guestbook Primefaces Portlet!
 enter-your-name=Enter your name
 editing=Editing
 no-entries-yet=No entries yet ...
+actions=Actions
 
 guestbook-admin-jsf-portlet-hello-world=Hello Guestbook Admin Primefaces Portlet!
 no-guestbooks-yet=No guestbooks yet ...
