Add: Sharing local Liferay repository

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -24,3 +24,8 @@ RUN mkdir -p /home/$USERNAME/.vscode-server/extensions \
     && chown -R $USERNAME \
         /home/$USERNAME/.vscode-server \
         /home/$USERNAME/.vscode-server-insiders
+
+# Sharing local Liferay repository
+RUN mkdir -p /home/$USERNAME/.liferay \
+    && chown -R $USERNAME \
+        /home/$USERNAME/.liferay
