--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,7 +44,10 @@
 
 		// Persist bash history for a non-root user
 		// https://code.visualstudio.com/remote/advancedcontainers/persist-bash-history
-		"source=lif-gb_bashhistory,target=/commandhistory,type=volume"
+		"source=lif-gb_bashhistory,target=/commandhistory,type=volume",
+
+		// Sharing local Liferay repository
+		"source=/home/gzamaury/.liferay,target=/home/vscode/.liferay,type=bind,consistency=cached"
 	]
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
