Add: Target upgrade to portal-7.3-ga8

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
 
     #
+    # https://help.liferay.com/hc/en-us/articles/360017885352-Configuring-a-Liferay-Workspace-#gradle-workspace-properties
+    # 
     # Set this property to override the default setting provided by
     # "liferay.workspace.product". Set the "app.server.tomcat.version" to match
     # what is contained inside the Liferay bundle. Both the
@@ -69,7 +71,8 @@
     # Set the folder that contains all module projects. The default value is set
     # to "modules". Set to "*" to search all subdirectories.
     #
-liferay.workspace.modules.dir = modules
+    
+    liferay.workspace.modules.dir = modules
 
     #
     # Set this to true to compile the JSP files in OSGi modules and have them
@@ -98,7 +101,9 @@ liferay.workspace.modules.dir = modules
     # individually.
     #
 
-liferay.workspace.product = portal-7.2-ga2
+    # blade init --list --all
+    # blade init -l
+    liferay.workspace.product = portal-7.3-ga8
 
     #
     # Set this property to override the default setting provided by
@@ -114,8 +119,7 @@ liferay.workspace.product = portal-7.2-ga2
     #
     #liferay.workspace.target.platform.version=7.3.5
 	
-	#liferay.workspace.target.platform.version=7.2.1-ga2-test
-	liferay.workspace.target.platform.version=7.2.1
+	liferay.workspace.target.platform.version=7.3.7
 
     #
     # Set the folder that contains Node.js-style theme projects. The default
