--- a/modules/guestbook/guestbook-api/build.gradle
+++ b/modules/guestbook/guestbook-api/build.gradle
@@ -8,12 +8,22 @@ repositories {
      mavenLocal()
 }
 
+	// Improved Dependency Management 
+	// - https://liferay.dev/blogs/-/blogs/liferay-portal-7-3-ce-ga2-release
+	// - https://liferay.dev/blogs/-/blogs/introducing-the-mega-jar-
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/configuring-dependencies/specifying-dependencies.html
+	
+	// Command Line Gogo Shell
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/using-the-gogo-shell/command-line-gogo-shell.html
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/using-the-gogo-shell/gogo-shell-commands.html
 dependencies {
-	compileOnly group: "com.liferay", name: "com.liferay.petra.lang"
-	compileOnly group: "com.liferay", name: "com.liferay.petra.string"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
-	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: '1.0.0'
-	compileOnly group: "org.osgi", name: "org.osgi.core"
-	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
+	compileOnly group: "com.liferay.portal", name: "release.portal.api", version: "7.3.7-ga8"
+	// compileOnly group: "com.liferay", name: "com.liferay.petra.lang"
+	// compileOnly group: "com.liferay", name: "com.liferay.petra.string"
+	// compileOnly group: "com.liferay", name: "com.liferay.petra.sql.dsl.api"
+	// compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
+	// compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning"
+	// compileOnly group: "org.osgi", name: "org.osgi.core"
+	// compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
 }
 
