--- a/modules/guestbook/guestbook-web/build.gradle
+++ b/modules/guestbook/guestbook-web/build.gradle
@@ -1,24 +1,34 @@
+
+	// Improved Dependency Management 
+	// - https://liferay.dev/blogs/-/blogs/liferay-portal-7-3-ce-ga2-release
+	// - https://liferay.dev/blogs/-/blogs/introducing-the-mega-jar-
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/configuring-dependencies/specifying-dependencies.html
+
+	// Command Line Gogo Shell
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/using-the-gogo-shell/command-line-gogo-shell.html
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/using-the-gogo-shell/gogo-shell-commands.html
 dependencies {
-	compileOnly group: "com.liferay", name: "com.liferay.asset.taglib"
-	compileOnly group: "com.liferay", name: "com.liferay.comment.taglib"
-	compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib"
-	compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.dynamic.section"
-	compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.form.navigator"
-	compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.util"
-	compileOnly group: "com.liferay", name: "com.liferay.journal.taglib"
-	compileOnly group: "com.liferay", name: "com.liferay.layout.taglib"
-	compileOnly group: "com.liferay", name: "com.liferay.site.taglib"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib"
-	compileOnly group: "javax.portlet", name: "portlet-api"
-	compileOnly group: "javax.servlet", name: "javax.servlet-api"
-	compileOnly group: "jstl", name: "jstl"
-	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
-	compileOnly group: "com.liferay", name: "com.liferay.application.list.api"
-	compileOnly group: "com.liferay", name: "com.liferay.petra.string"
+	compileOnly group: "com.liferay.portal", name: "release.portal.api", version: "7.3.7-ga8"
+	// compileOnly group: "com.liferay", name: "com.liferay.asset.taglib"
+	// compileOnly group: "com.liferay", name: "com.liferay.comment.taglib"
+	// compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib"
+	// compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.dynamic.section"
+	// compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.form.navigator"
+	// compileOnly group: "com.liferay", name: "com.liferay.frontend.taglib.util"
+	// compileOnly group: "com.liferay", name: "com.liferay.journal.taglib"
+	// compileOnly group: "com.liferay", name: "com.liferay.layout.taglib"
+	// compileOnly group: "com.liferay", name: "com.liferay.site.taglib"
+	// compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
+	// compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib"
+	// compileOnly group: "javax.portlet", name: "portlet-api"
+	// compileOnly group: "javax.servlet", name: "javax.servlet-api"
+	// compileOnly group: "jstl", name: "jstl"
+	// compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
+	// compileOnly group: "com.liferay", name: "com.liferay.application.list.api"
+	// compileOnly group: "com.liferay", name: "com.liferay.petra.string"
 	
 	compileOnly project(":modules:guestbook:guestbook-api")
 	compileOnly project(":modules:guestbook:guestbook-service")
 
-	cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.0.2"
+	// cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.0.2"
 }
