--- a/wars/guestbook-jsf-portlet/build.gradle
+++ b/wars/guestbook-jsf-portlet/build.gradle
@@ -2,39 +2,44 @@
 repositories {
      mavenCentral()
      mavenLocal()
+     flatDir {
+        dirs '../../modules/guestbook/guestbook-api/build/libs',
+             '../../modules/guestbook/guestbook-service/build/libs'
+     }
 }
 
+	// Improved Dependency Management 
+	// - https://liferay.dev/blogs/-/blogs/liferay-portal-7-3-ce-ga2-release
+	// - https://liferay.dev/blogs/-/blogs/introducing-the-mega-jar-
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/configuring-dependencies/specifying-dependencies.html
+	
+	// Command Line Gogo Shell
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/using-the-gogo-shell/command-line-gogo-shell.html
+	// - https://learn.liferay.com/dxp/latest/en/liferay-internals/fundamentals/using-the-gogo-shell/gogo-shell-commands.html
 dependencies {
+    compileOnly group: "com.liferay.portal", name: "release.portal.api", version: "7.3.7-ga8"
 
+    // compileOnly group: 'com.liferay.portal', name: 'com.liferay.portal.kernel'
+    
+    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.alloy', version: '4.1.0'
+    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0'
+    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0'
     compileOnly group: 'org.glassfish', name: 'javax.faces', version: '2.2.20'
-    
-    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.alloy', version: '4.1.0'
-    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0-SNAPSHOT'
-    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0-SNAPSHOT'
-    // compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '5.0.0-SNAPSHOT'
-    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.ext', version: '7.0.0'
-    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.impl', version: '5.0.0'
-    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '5.0.0'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.bridge.api', version: '4.2.0'
     compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.util', version: '3.4.0'
-    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.portal', version: '4.1.0'
+    compileOnly group: 'com.liferay.faces', name: 'com.liferay.faces.portal', version: '4.1.1'    
+    // compileOnly group: 'org.primefaces', name: 'primefaces', version: '8.0'
     
-    compileOnly group: 'org.primefaces', name: 'primefaces', version: '8.0'
-    
-    compileOnly group: 'org.jboss.weld', name: 'weld-core-impl', version: '3.0.5.Final'
-    compileOnly group: 'javax.enterprise', name: 'cdi-api', version: '1.2'
+    // compileOnly group: 'org.jboss.weld', name: 'weld-core-impl', version: '3.0.5.Final'
+    // compileOnly group: 'javax.enterprise', name: 'cdi-api', version: '1.2'
     compileOnly group: 'org.osgi', name: 'org.osgi.service.cdi', version: '1.0.0'
-    compileOnly group: 'org.osgi', name: 'org.osgi.annotation.versioning', version: '1.0.0'
+    // compileOnly group: 'org.osgi', name: 'org.osgi.annotation.versioning', version: '1.0.0'
     
     compileOnly group: 'javax.portlet', name: 'portlet-api', version: '3.0.0'
-    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-    //compileOnly group: 'javax.el', name: 'javax.el-api', version: '2.2.1'
+    // compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
     
-    compileOnly group: 'com.liferay.portal', name: 'com.liferay.portal.kernel'
-    //providedCompile group: 'com.liferay.portal', name: 'com.liferay.portal.impl', version: '4.12.11'
-    compileOnly group: 'log4j', name: 'log4j', version: '1.2.14'
-    
-    compileOnly project(":modules:guestbook:guestbook-api")
-    compileOnly project(":modules:guestbook:guestbook-service")
+    compileOnly ":com.liferay.docs.guestbook.api:1.0"
+    compileOnly ":com.liferay.docs.guestbook.service:1.0"
 
     //compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.api', version: '2.0.1'
     //compileOnly group: 'com.liferay', name: 'com.liferay.bean.portlet.cdi.extension', version: '2.0.7'
@@ -45,6 +50,4 @@ dependencies {
     //compileOnly group: "com.liferay", name: "com.liferay.application.list.user.personal.site.permissions"
     //compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
     //compileOnly group: 'com.liferay.portal', name: 'com.liferay.util.taglib', version: '4.3.4'
-
 }
-
