--- a/gradle.properties
+++ b/gradle.properties
@@ -152,4 +152,4 @@
     # information.
     #
 microsoft.translator.subscription.key = 
-#target.platform.index.sources = true
+target.platform.index.sources = true
